{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 14,
  "lineage": "267d3ab9-6af4-f563-56fb-5c40958c7caf",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-11T10:14:07.910-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/light-ratio-453107-r4/global/firewalls/redis-swarm-allow-http",
            "log_config": [],
            "name": "redis-swarm-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/global/networks/redis-swarm-network",
            "priority": 1000,
            "project": "light-ratio-453107-r4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/global/firewalls/redis-swarm-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "swarm-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.swarm_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-03-11T10:14:08.118-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/light-ratio-453107-r4/global/firewalls/redis-swarm-allow-internal",
            "log_config": [],
            "name": "redis-swarm-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/global/networks/redis-swarm-network",
            "priority": 1000,
            "project": "light-ratio-453107-r4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/global/firewalls/redis-swarm-allow-internal",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "swarm-node"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "swarm-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.swarm_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-11T10:14:07.731-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/light-ratio-453107-r4/global/firewalls/redis-swarm-allow-ssh",
            "log_config": [],
            "name": "redis-swarm-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/global/networks/redis-swarm-network",
            "priority": 1000,
            "project": "light-ratio-453107-r4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/global/firewalls/redis-swarm-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "swarm-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.swarm_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_swarm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2377",
                  "7946",
                  "6379",
                  "6380",
                  "5001"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "7946",
                  "4789"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-03-11T10:14:07.980-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/light-ratio-453107-r4/global/firewalls/redis-swarm-allow-swarm",
            "log_config": [],
            "name": "redis-swarm-allow-swarm",
            "network": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/global/networks/redis-swarm-network",
            "priority": 1000,
            "project": "light-ratio-453107-r4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/global/firewalls/redis-swarm-allow-swarm",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "swarm-node"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "swarm-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.swarm_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "swarm_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20250213",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/zones/asia-south1-a/disks/redis-swarm-manager"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-03-11T10:51:59.298-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/light-ratio-453107-r4/zones/asia-south1-a/instances/redis-swarm-manager",
            "instance_id": "569339965926655696",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "piush:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDTucPYQjg4551KkKPUvtDSHu26blYdXh/cItm00DabmeoAefMcfPOe3DMOCewCR8HffJg60DOvnxSKUxMP5XV4iRXKnrJwmD3BwUh8np92sSTmvD4kybAESQRnkk6pzHbOC88jq0N3uFZiQZ0jEtYiXswSn3k1565Pgf1oNINjrdoeytZaxs3PNXDQOhQ8fYgHjchTHvx0cDSu2j5PhE0bJ8uCB/Hzd325hQEEinwReppKxHVzTDfbA1/bo4TZb3Umev9Uu2Shq+lUalLr1PnmrPYmiAZu2J3KHotsqwTkJqR266knRPlU1ErhqPnMOrstZ9uzXg0aa6SYG3vZs5pUfCLqeBJiCgXNhK8Q3lpapgwMLEB10m5G1TiNUm8MjQYem9vYhs6pdJ9FmpotyNEVDtTpF/hQuGaB9yvpUT46wct [...]
            },
            "metadata_fingerprint": "bjTnORBYGDc=",
            "name": "redis-swarm-manager",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.47.163.149",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/global/networks/redis-swarm-network",
                "network_ip": "10.10.0.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/regions/asia-south1/subnetworks/redis-swarm-subnet",
                "subnetwork_project": "light-ratio-453107-r4"
              }
            ],
            "project": "light-ratio-453107-r4",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/zones/asia-south1-a/instances/redis-swarm-manager",
            "service_account": [
              {
                "email": "1019775793519-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "swarm-manager",
              "swarm-node"
            ],
            "tags_fingerprint": "uXNzqp37Xvc=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.swarm_network",
            "google_compute_subnetwork.swarm_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "swarm_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20250213",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/zones/asia-south1-b/disks/redis-swarm-worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-03-11T10:52:30.296-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/light-ratio-453107-r4/zones/asia-south1-b/instances/redis-swarm-worker",
            "instance_id": "2563091805096494769",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "piush:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDTucPYQjg4551KkKPUvtDSHu26blYdXh/cItm00DabmeoAefMcfPOe3DMOCewCR8HffJg60DOvnxSKUxMP5XV4iRXKnrJwmD3BwUh8np92sSTmvD4kybAESQRnkk6pzHbOC88jq0N3uFZiQZ0jEtYiXswSn3k1565Pgf1oNINjrdoeytZaxs3PNXDQOhQ8fYgHjchTHvx0cDSu2j5PhE0bJ8uCB/Hzd325hQEEinwReppKxHVzTDfbA1/bo4TZb3Umev9Uu2Shq+lUalLr1PnmrPYmiAZu2J3KHotsqwTkJqR266knRPlU1ErhqPnMOrstZ9uzXg0aa6SYG3vZs5pUfCLqeBJiCgXNhK8Q3lpapgwMLEB10m5G1TiNUm8MjQYem9vYhs6pdJ9FmpotyNEVDtTpF/hQuGaB9yvpUT46wct [...]
            },
            "metadata_fingerprint": "bjTnORBYGDc=",
            "name": "redis-swarm-worker",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.47.233.147",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/global/networks/redis-swarm-network",
                "network_ip": "10.10.0.9",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/regions/asia-south1/subnetworks/redis-swarm-subnet",
                "subnetwork_project": "light-ratio-453107-r4"
              }
            ],
            "project": "light-ratio-453107-r4",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/zones/asia-south1-b/instances/redis-swarm-worker",
            "service_account": [
              {
                "email": "1019775793519-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "swarm-node",
              "swarm-worker"
            ],
            "tags_fingerprint": "-nd6n3Xiahg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-south1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_instance.swarm_manager",
            "google_compute_network.swarm_network",
            "google_compute_subnetwork.swarm_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "swarm_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "description": "VPC Network for Docker Swarm Cluster",
            "enable_ula_internal_ipv6": false,
            "id": "projects/light-ratio-453107-r4/global/networks/redis-swarm-network",
            "mtu": 0,
            "name": "redis-swarm-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7121636824530669990",
            "numeric_id": "7121636824530669990",
            "project": "light-ratio-453107-r4",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/global/networks/redis-swarm-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "swarm_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-11T10:14:10.111-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/light-ratio-453107-r4/regions/asia-south1/subnetworks/redis-swarm-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "redis-swarm-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/global/networks/redis-swarm-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "light-ratio-453107-r4",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/light-ratio-453107-r4/regions/asia-south1/subnetworks/redis-swarm-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 90329242725634445
          },
          "dependencies": [
            "google_compute_network.swarm_network"
          ]
        }
      ]
    }
  ]
}